--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile project(':lib_hxgioc')
-
+//    compile project(':lib_hxgioc')
+    compile 'com.github.huangxiaoguo1:hxgfindviewbyid:1.0.0'
 }
